--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,8 +1,22 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Visit San Francisco</title>
 </head>
 <body>
   <H1>Greetings from San Francisco!</H1>
+  <p>San Francisco is a <strong>beautiful</strong> city to visit. The bext time to visit is spring, summer, and fall.</p>
+  <h2>Here are the <em>best</em> ways to get here:</h2>
+    <ol>
+      <li>by plane</li>
+      <li>by train</li>
+      <li>by bus</li>
+    </ol>
+  <h2>Here are three of the 48 airlines that service San Francisco International Airport</h2>
+    <ul>
+      <li><a href="https://www.united.com/ual/en/us/">United Airlines</a></li>
+      <li><a href="https://beta.aircanada.com/us/en/aco/home.html?acid=beta%7Credirect%7Caircanada.com%7CDispBar">Air Canada</a></li>
+      <li><a href="https://www.airchina.us/US/GB/Home">Air China</a></li>
+    </ul>
 </body>
 </html>
