--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Wildflowers Article</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <section id="external-links">
