Updated two files in gps directory.

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,7 +1,7 @@
 <!--
-Write your names here:
-1.
-2.
+Write your names here: 
+1. Yancy Zhang
+2. Dennis Marchetti
 We spent [#] hours on this challenge.
 -->
 
@@ -11,7 +11,8 @@ We spent [#] hours on this challenge.
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./gps2-1.css">  <!-- Insert a link to the stylesheet here -->
+    <meta name ="viewport" content="width=devive-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./gps2-1.css">  
     <title>Git Cheat Sheet</title>
   </head>
 
@@ -276,6 +277,7 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  
+  <!-- We feel more comfortable working with CSS positioning and have a strong understanding of display and using float when necessary.  We are always wanting to learn more, especially with background image formatting and fitting within their respective blocks.  We think overall we have a strong understanding of CSS code and how it effects HTML and have made much progress since the beginning of the week, but always are looking to learn more -->
   </body>
 </html>
