--- a/html/forms/success.html
+++ b/html/forms/success.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Thanks for submitting your form!</h1>
-	<h2>Good luck on your new career after Dev Bootcamp!</h2>
+	<h2>Good luck on your new career!</h2>
 
 </body>
 </html>
