Update index.html, contact.html, product_details.html, waiver.html

--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -2,8 +2,21 @@
 <html>
 <head>
   <title>Legal Waiver</title>
+  <meta charset="utf-8">
+  <meta name ="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
+	<header>
+		<h2>Moons Bootz Corporation</h2>
+		<UL>
+		<li><a href="../index.html">Home</a></li>
+		<li><a href="../product_details.html">Product Details</a></li>
+		<li><a href="../contact.html">Contact Us</a></li>
+		</UL>
+	</header>
+	<img src="../images/blue_moon.jpg" alt="moon boots" />
+	<p>Photo Credit: dinobike</p>
+	<p>License: <a href="https://creativecommons.org/licenses/by-sa/2.0/">Creative Commons</a></p>
+  	<p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
 </body>
 </html>
