--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -3,9 +3,47 @@
 <head>
 	<title>Great Train Trips of the World</title>
 	<meta charset="utf-8">
+
 </head>
 <body>
+	<header>
+		<nav>
+			<ul>
+				<li>Train trip in Canada</li>
+				<li>Train trips in Europe</li>
+				<li>Train trips in China</li>
+			</ul>
+		</nav>
+	</header>
 	<h1>Great Train Trips of the World</h1>
-
+	<main>
+		<table border=2px>
+			<tr>
+				<th>country</th>
+				<th>number of days</th>
+				<th>total cost of the trip</th>
+			</tr>
+			<tr>
+				<td>Canada</td>
+				<td>14</td>
+				<td>$2000</td>
+			</tr>
+			<tr>
+				<td>China</td>
+				<td>21</td>
+				<td>$3000</td>
+			</tr>
+			<tr>
+				<td>France</td>
+				<td>14</td>
+				<td>$3000</td>
+			</tr>
+		</table>
+	</main>		
+	<section></section>
+	<article></article>
+	<aside></aside>
+	<footer>Copy Rigth@Fantastic Train Trips, Inc.</footer>
 </body>
 </html>
+
