--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,8 +1,8 @@
 <!--
 Write your names here: 
 1. Yancy Zhang
-2. Dennis Marchetti
-We spent [#] hours on this challenge.
+2.  Elaine Gouvea
+We spent 1 hours on this challenge.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
@@ -19,7 +19,7 @@ We spent [#] hours on this challenge.
   <body>
     <header>
       <h1>GitHub: Git Cheat Sheet</h1>
-      <p>Git is the open source distributed version control system that
+      <p id="intro">Git is the open source distributed version control system that
         facilitates GitHub activities on your laptop or desktop.
         This cheat sheet summarizes commonly used Git command line
         instructions for quick reference.</p>
